--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,38 +1,59 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid d-flex justify-content-between">
+<!--    Logo -->
     <div class="navbar-brand ">
       <div class="brand-nav">
         <%= link_to "/" do%>
+          <!-- Place for logo image/icon-->
           <i class="fa-solid fa-dog nav-icon"></i>
           <span class="nav-brand-text">RENTAPet</span>
         <% end %>
       </div>
     </div>
+<!--    Search bar -->
     <div class="navbar-search">
         <form class="d-flex ">
           <div class="nav-search-container d-flex align-items-center">
             <input class="form-control rounded-pill border-0"
                    type="search" placeholder="Search" aria-label="Search">
+            <!-- Button which submits the form -->
             <span class="" type="submit">
               <i class="fa-solid fa-magnifying-glass pe-2 opacity-50"></i>
             </span>
           </div>
         </form>
       </div>
+<!--    avatar and dropdown -->
     <div class="nav-avatar-dropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link " href="#"
-             id="navbarDarkDropdownMenuLink" role="button"
-             data-bs-toggle="dropdown" aria-expanded="false">
+          <%=link_to "/", class:"nav-link",
+                     id:"navbarDarkDropdownMenuLink",
+                     role:"button", data:{bs_toggle:"dropdown"},
+                      aria:{expanded:"false"} do%>
+<!--              place for avatar picture-->
               <img src="https://picsum.photos/100/100"
                    alt="avatar" class="avatar-xlarge">
-          </a>
+          <%end %>
+
           <ul class="dropdown-menu dropdown-menu-end"
               aria-labelledby="navbarDarkDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+<!--            List of actions in Dropdown-->
+            <li>
+              <%=link_to "/", class:"dropdown-item" do%>
+                <span>Action</span>
+              <%end %>
+            </li>
+            <li>
+              <%=link_to "/", class:"dropdown-item" do%>
+                <span>Another action</span>
+              <%end %>
+            </li>
+            <li>
+              <%=link_to "/", class:"dropdown-item" do%>
+                <span>Something else here</span>
+              <%end %>
+            </li>
           </ul>
         </li>
       </ul>
