--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Pets Overview</h1>
+<%= link_to "Add Pet", new_pet_path %>
 <% @pets.each do |pet| %>
-  <%= pet.name %>
+  <%= link_to pet.name, pet_path(pet) %>
 <% end %>
