--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
 <!--    Logo -->
     <div class="navbar-brand ">
       <div class="brand-nav">
-        <%= link_to "/" do%>
+        <%= link_to "/", class:"brand-link" do%>
           <!-- Place for logo image/icon-->
           <i class="fa-solid fa-dog nav-icon"></i>
           <span class="nav-brand-text">RENTAPet</span>
@@ -53,6 +53,12 @@
               <%=link_to "/", class:"dropdown-item" do%>
                 <span>Something else here</span>
               <%end %>
+            </li>
+            <li>
+            <div class="dropdown-divider"></div>
+            </li>
+            <li>
+              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
             </li>
           </ul>
         </li>
