--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<div class="fixed-bottom">
+<div class="fixed-bottom p-3">
 <footer class="blockquote-footer">© 2022 RENTAPet, Inc.·Privacy·Terms·Sitemap·Company details </footer>
 </div>
 </div>
