--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+<div class="row justify-content-center">
+<div class= "col-4">
 <%= simple_form_for @pet do |f| %>
   <%= f.input :name %>
   <%= f.input :gender %>
@@ -8,3 +11,7 @@
   <%# <%= f.input :photo, as: :file %>
   <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
 <% end %>
+
+</div>
+</div>
+</div>
