--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -10,6 +10,8 @@
   <%= f.input :price %>
   <%# <%= f.input :photo, as: :file %>
   <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
+  <%= link_to "Back", pets_path %>
+
 <% end %>
 
 </div>
