--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,17 +41,12 @@
 <!--            List of actions in Dropdown-->
             <li>
               <%=link_to "/", class:"dropdown-item" do%>
-                <span>Action</span>
+                <span>Home</span>
               <%end %>
             </li>
             <li>
-              <%=link_to "/", class:"dropdown-item" do%>
-                <span>Another action</span>
-              <%end %>
-            </li>
-            <li>
-              <%=link_to "/", class:"dropdown-item" do%>
-                <span>Something else here</span>
+              <%=link_to "/pets", class:"dropdown-item" do%>
+                <span>Pets</span>
               <%end %>
             </li>
             <li>
