--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
 <div class="row justify-content-center">
-<div class= "col-4">
+<div class= "col-12 col-lg-5">
 <%= simple_form_for @pet do |f| %>
+
   <%= f.input :name %>
   <%= f.input :gender %>
   <%= f.input :species %>
