--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -3,12 +3,12 @@
 <div class= "col-12 col-lg-5">
 <%= simple_form_for @pet do |f| %>
 
-  <%= f.input :name %>
-  <%= f.input :gender %>
-  <%= f.input :species %>
-  <%= f.input :age %>
-  <%= f.input :description %>
-  <%= f.input :price %>
+  <%= f.input :name, placeholder: "半角英数字で入力してください" %>
+  <%= f.input :gender, placeholder: "性別を入力してください"%>
+  <%= f.input :species, placeholder: "動物を入力してください" %>
+  <%= f.input :age, placeholder:"年齢を入力してください" %>
+  <%= f.input :description, placeholder:"詳細を入力してください" %>
+  <%= f.input :price, placeholder:"金額を入力してください" %>
   <%# <%= f.input :photo, as: :file %>
   <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
   <%= link_to "Back", pets_path %>
