--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,3 @@
-<div class="container">
-<div class="fixed-bottom">
-<footer class="blockquote-footer">© 2022 RENTAPet, Inc.·Privacy·Terms·Sitemap·Company details </footer>
-</div>
-</div>
+<footer class="footer d-flex justify-content-center align-items-center">
+  <span>2022 RENTAPet©</span>
+</footer>
