--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -3,14 +3,22 @@
 <div class= "col-12 col-lg-5">
 <%= simple_form_for @pet do |f| %>
 
-  <%= f.input :name, placeholder: "半角英数字で入力してください" %>
-  <%= f.input :gender, placeholder: "性別を入力してください"%>
-  <%= f.input :species, placeholder: "動物を入力してください" %>
-  <%= f.input :age, placeholder:"年齢を入力してください" %>
-  <%= f.input :description, placeholder:"詳細を入力してください" %>
-  <%= f.input :price, placeholder:"金額を入力してください" %>
+  <%= f.input :name, placeholder: "name" %>
+  <%= f.input :gender, placeholder: "gender"%>
+  <%= f.input :species, placeholder: "species" %>
+  <%= f.input :age, placeholder:"age" %>
+  <%= f.input :description, placeholder:"description" %>
+  <%= f.input :price, placeholder:"$" %>
   <%# <%= f.input :photo, as: :file %>
+  <div class="form-check">
+  <input class="form-check-input" type="checkbox" id="gridCheck">
+  <label class="form-check-label" for="gridCheck">
+        Check me out
+  </label>
+  </div>
   <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
+
+
   <%= link_to "Back", pets_path %>
 
 <% end %>
