--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,15 +1,26 @@
 <div class="container">
 <div class="row justify-content-center">
-<div class= "col-4">
+<div class= "col-12 col-lg-5">
 <%= simple_form_for @pet do |f| %>
-  <%= f.input :name %>
-  <%= f.input :gender %>
-  <%= f.input :species %>
-  <%= f.input :age %>
-  <%= f.input :description %>
-  <%= f.input :price %>
+
+  <%= f.input :name, placeholder: "name" %>
+  <%= f.input :gender, placeholder: "gender"%>
+  <%= f.input :species, placeholder: "species" %>
+  <%= f.input :age, placeholder:"age" %>
+  <%= f.input :description, placeholder:"description" %>
+  <%= f.input :price, placeholder:"$" %>
   <%# <%= f.input :photo, as: :file %>
+  <div class="form-check">
+  <input class="form-check-input" type="checkbox" id="gridCheck">
+  <label class="form-check-label" for="gridCheck">
+        Check me out
+  </label>
+  </div>
   <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
+
+
+  <%= link_to "Back", pets_path %>
+
 <% end %>
 
 </div>
