--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,1 +1,5 @@
-<h1>Hello World</h1>
+<div class="container">
+  <h1>Confirm Booking</h1>
+  <%= render 'form' %>
+  <%= link_to "Back", pet_path(@pet) %>
+</div>
