fixed the footer at the bottom

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,4 @@
-<footer class="footer d-flex justify-content-center align-items-center">
+<footer
+  class="footer d-flex justify-content-center align-items-center">
   <span>2022 RENTAPet©</span>
 </footer>
