--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,3 +7,9 @@
   box-shadow:  0 0 24px rgba(0,0,0,0.35);
   height: 20vh;
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
