--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body class="d-flex flex-column">
+  <body class="main">
     <%= render "shared/navbar" %>
-    <%= yield %>
+    <%= yield%>
     <%= render "shared/footer" %>
   </body>
 </html>
