--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body class="main">
     <%= render "shared/navbar" %>
-    <%= yield%>
+    <div class="content-vh">
+    <%=yield%>
+    </div>
     <%= render "shared/footer" %>
   </body>
 </html>
