fixed card bottom margin

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -5,7 +5,7 @@
       <span class=""><i class="fa-solid fa-plus"></i></span>
     <%end %>
   </div>
-  <section class="grid-section">
+  <section class="grid-section mb-5">
     <% @pets.each do |pet| %>
       <div class="grid-section-item">
         <%=render "shared/card", pet: pet%>
