implemented scope in booking policy which only shows the users bookings on the booking page

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Bookings Overview</h1>
 <% @bookings.each do |booking| %>
-  <%= link_to booking.pet.name, booking_path(booking) %>
+  <p><%= link_to booking.pet.name, booking_path(booking) %></p>
 <% end %>
