--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,3 +1,42 @@
-<h1>Show Page</h1>
-<%= @pet.name %>
-<%= link_to "Book", new_pet_booking_path(@pet) %>
+<div class="container">
+  <h1 class="mt-3 mb-3"><%= @pet.name %></h1>
+
+  <div class="photos">
+    <div class="main-photo">
+        <img src="https://picsum.photos/600/600" alt="main-photo photo">
+    </div>
+    <div class="sub-photos">
+        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
+        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
+        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
+        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
+    </div>
+  </div>
+  <div class="info-container mt-4 d-flex justify-content-between">
+    <div class="description ">
+      <div class="pet-info">
+        <ul class="list-inline">
+          <li class="list-inline-item">Species: <%=@pet.species %></li>
+          <li class="list-inline-item">Age: <%=@pet.age %></li>
+          <li class="list-inline-item">Gender: <%=@pet.gender%></li>
+        </ul>
+      </div>
+
+      <div class="pet-description mt-5">
+
+        <%="Description: #{@pet.description}"%>
+      </div>
+    </div>
+
+    <div class="book-block">
+      <div class="price mb-3">
+        <h3><%="#{@pet.price} $ per day"%></h3>
+      </div>
+
+      <h3 class="d-flex justify-content-center ">
+        <%= link_to "Book", new_pet_booking_path(@pet),
+                           class:"btn btn-primary button flex-grow-1" %>
+      </h3>
+    </div>
+  </div>
+</div>
