--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,44 @@
   </div>
 </div>
 <div class="container">
+  <div class="card text-center p-5 mt-3">
+    <p>want a pet but unsure about owning one? Try rent a pet! Browse through our selection of pets and choose the right one for you!</p>
+  </div>
+</div>
 
-<div class="card text-center p-3 mt-3">
-<p>want a pet but unsure about owning one? Try rent a pet! Browse through our selection of pets and choose the right one for you!</p>
+<div class="container mt-3 mb-3">
+
+<div class="cards">
+  <div class="card-trip">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+    <div class="card-trip-infos">
+      <div>
+        <h2>Milo</h2>
+        <p>Cute and friendly! Loves to play</p>
+      </div>
+
+    </div>
+  </div>
+  <div class="card-trip">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+    <div class="card-trip-infos">
+      <div>
+        <h2>Mr Grinch</h2>
+        <p>Grumpy cat. Quite mean. Always moody</p>
+      </div>
+
+    </div>
+  </div>
+  <div class="card-trip">
+    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+    <div class="card-trip-infos">
+      <div>
+        <h2>Willy</h2>
+        <p>Friendly whale. Huge pool needed</p>
+      </div>
+
+    </div>
+  </div>
 </div>
 
 </div>
