added booking design

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,5 +1,10 @@
 <%= simple_form_for [@pet, @booking] do |f| %>
-  <%= f.input :start_date, as: :date, html5: true %>
-  <%= f.input :end_date, as: :date, html5: true %>
-  <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
+  <%= f.input :start_date, as: :date, html5: true, class: "start-date" %>
+  <%= f.input :end_date, as: :date, html5: true, class: "end-date" %>
+  <div class="price-tag">
+    <span>Total Price:<span class="total-price"></span></span>
+  </div>
+  <div class="submit-form d-flex justify-content-center ">
+  <%= f.submit 'Submit', class: 'form-button btn btn-primary flex-grow-1 mt-3' %>
+  </div>
 <% end %>
