--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,15 @@
-<div class="container">
-  <h1>Confirm Booking</h1>
-  <%= render 'form' %>
-  <%= link_to "Back", pet_path(@pet) %>
+<div class="container d-flex justify-content-center align-items-center">
+  <div class="form-container mt-5">
+    <div class="form-header d-flex justify-content-center">
+      <h1>Confirm Booking</h1>
+    </div>
+    <%= render 'form' %>
+    <div class="d-flex justify-content-center ">
+      <%= link_to pet_path(@pet),
+                  class:"back-button flex-grow-1 d-flex justify-content-center" do%>
+        <span>Back</span>
+      <%end %>
+
+    </div>
+  </div>
 </div>
