--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,12 +8,33 @@
   </div>
 </div>
 <div class="container">
-  <div class="card text-center p-5 mt-3">
-    <p>want a pet but unsure about owning one? Try rent a pet! Browse through our selection of pets and choose the right one for you!</p>
+  <div class="text-center p-5 mt-3">
+    <p>Want a pet but unsure about owning one? Try RENTApet! Browse through our selection of pets and choose the right pet for you!</p>
   </div>
 </div>
 <div class="container mt-3 mb-3">
   <div class="cards">
+    <div class="card pet-card" style="width: 20rem;">
+      <img class="card-img-top pet-card-image" src="https://source.unsplash.com/random/?dog" alt="Card image cap">
+      <div class="card-body px-3">
+        <h3 class="card-title">Milo</h3>
+        <p class="card-text">Cute and friendly! Loves to play</p>
+      </div>
+    </div>
+    <div class="card pet-card" style="width: 20rem;">
+      <img class="card-img-top pet-card-image" src="https://source.unsplash.com/random/?cat" alt="Card image cap">
+      <div class="card-body px-3">
+        <h3 class="card-title">Mr. Grinch</h3>
+        <p class="card-text">Grumpy cat. Quite mean. Always moody</p>
+      </div>
+    </div>
+    <div class="card pet-card" style="width: 20rem;">
+      <img class="card-img-top pet-card-image" src="https://source.unsplash.com/random/?whale" alt="Card image cap">
+      <div class="card-body px-3">
+        <h3 class="card-title">Willy</h3>
+        <p class="card-text">Friendly whale. Huge pool needed</p>
+      </div>
+    </div>
     <div class="card-trip">
       <img src="https://source.unsplash.com/random/?dog" />
       <div class="card-trip-infos">
@@ -28,7 +49,7 @@
       <div class="card-trip-infos">
         <div>
           <h2>Mr Grinch</h2>
-          <p>Grumpy cat. Quite mean. Always moody</p>
+          <p></p>
         </div>
       </div>
     </div>
