fixed a missing line

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
       <div class="card-trip-infos">
         <div>
           <h2>Mr Grinch</h2>
-          <p></p>
+          <p>Very grumpy. Not such a fun cat</p>
         </div>
       </div>
     </div>
