--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,6 +5,6 @@
 
 <div class="d-flex">
   <%= link_to booking_path(@booking), data: { turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'card-action card-edit' do %>
-    <i class="fas fa-times"></i>
+  <i class="fa-solid fa-trash"></i>
   <% end %>
   </div>
