--- a/app/views/shared/_pet_card.html.erb
+++ b/app/views/shared/_pet_card.html.erb
@@ -2,9 +2,9 @@
   <%= link_to pet_path(pet), class:"pet-card-btn" do%>
   <img class="card-img-top pet-card-image" src="https://picsum.photos/300/200" alt="Card image cap">
   <div class="card-body px-3">
-    <h3 class="card-title"><%= pet.name %></h3>
-    <p class="card-text"><%= pet.description %></p>
-    <p class="card-text"><%= pet.price %>$</p>
+    <h3 class="card-title"><%= pet.name %> (<%= pet.species %>)</h3>
+    <p class="card-text">Location: <%= pet.shelter.location %></p>
+    <p class="card-text">Price: <%= pet.price %>$</p>
   </div>
   <%end %>
 </div>
