--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -50,6 +50,11 @@
               <%end %>
             </li>
             <li>
+              <%=link_to "/bookings", class:"dropdown-item" do%>
+                <span>Bookings</span>
+              <%end %>
+            </li>
+            <li>
             <div class="dropdown-divider"></div>
             </li>
             <li>
