added sehtler and location as tags to pet show page and changed description width

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -19,6 +19,8 @@
           <li class="list-inline-item">Species: <%=@pet.species %></li>
           <li class="list-inline-item">Age: <%=@pet.age %></li>
           <li class="list-inline-item">Gender: <%=@pet.gender%></li>
+          <li class="list-inline-item">Shelter: <%=@pet.shelter.name%></li>
+          <li class="list-inline-item">Location: <%=@pet.shelter.location%></li>
         </ul>
       </div>
 
