fixed the margins

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -16,7 +16,7 @@
     <div class="description ">
       <div class="pet-info">
         <ul class="list-inline">
-          <li class="list-inline-item">Species: <%=@pet.species %></li>
+          <li class="list-inline-item mb-3">Species: <%=@pet.species %></li>
           <li class="list-inline-item">Age: <%=@pet.age %></li>
           <li class="list-inline-item">Gender: <%=@pet.gender%></li>
           <li class="list-inline-item">Shelter: <%=@pet.shelter.name%></li>
