--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -3,13 +3,13 @@
 
   <div class="photos">
     <div class="main-photo">
-        <img src="https://picsum.photos/600/600" alt="main-photo photo">
+        <img src="https://source.unsplash.com/featured/?<%=@pet.species%>}&#{rand(10000)}" alt="main-photo photo">
     </div>
     <div class="sub-photos">
-        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
-        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
-        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
-        <img src="https://picsum.photos/500/500" alt="sub-photo photo">
+        <img src="https://source.unsplash.com/featured/?<%=@pet.species%>}&#{rand(10000)}" alt="sub-photo photo">
+        <img src="https://source.unsplash.com/featured/?<%=@pet.species%>}&#{rand(10000)}" alt="sub-photo photo">
+        <img src="https://source.unsplash.com/featured/?<%=@pet.species%>}&#{rand(10000)}" alt="sub-photo photo">
+        <img src="https://source.unsplash.com/featured/?<%=@pet.species%>}&#{rand(10000)}" alt="sub-photo photo">
     </div>
   </div>
   <div class="info-container mt-4 d-flex justify-content-between">
@@ -26,7 +26,7 @@
 
       <div class="pet-description mt-5">
 
-        <%="Description: #{@pet.description}"%>
+        <%="#{@pet.description}"%>
       </div>
     </div>
 
