--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -22,6 +22,9 @@
   overflow: hidden;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 16px;
+  object-fit: cover;
+  object-position: 50% 50%;
 }
 
 .card-trip > img {
