--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -41,7 +41,7 @@
 <!--            List of actions in Dropdown-->
              <% if current_user%>
                 <li>
-                    <span class=dropdown-item"><%= current_user.user_name %></span>
+                    <span class="dropdown-item"><%= current_user.user_name %></span>
                 </li>
               <li>
                 <div class="dropdown-divider"></div>
