--- a/app/views/shared/_booking_card.html.erb
+++ b/app/views/shared/_booking_card.html.erb
@@ -1,6 +1,6 @@
 <div class="card pet-card" style="width: 20rem;">
   <%= link_to booking_path(booking), class:"pet-card-btn" do%>
-  <img class="card-img-top pet-card-image" src="https://picsum.photos/300/200" alt="Card image cap">
+  <img class="card-img-top pet-card-image" src="https://source.unsplash.com/featured/?<%=booking.pet.species%>}&#{rand(10000)}" alt="Card image cap">
   <div class="card-body px-3">
     <h3 class="card-title"><%= booking.pet.name %></h3>
     <p class="card-text">From: <%= booking.start_date.strftime("%d/%m/%y") %></p>
