fixed pet info margins

--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -17,10 +17,10 @@
       <div class="pet-info">
         <ul class="list-inline">
           <li class="list-inline-item mb-3">Species: <%=@pet.species %></li>
-          <li class="list-inline-item">Age: <%=@pet.age %></li>
-          <li class="list-inline-item">Gender: <%=@pet.gender%></li>
-          <li class="list-inline-item">Shelter: <%=@pet.shelter.name%></li>
-          <li class="list-inline-item">Location: <%=@pet.shelter.location%></li>
+          <li class="list-inline-item mb-3">Age: <%=@pet.age %></li>
+          <li class="list-inline-item mb-3">Gender: <%=@pet.gender%></li>
+          <li class="list-inline-item mb-3">Shelter: <%=@pet.shelter.name%></li>
+          <li class="list-inline-item mb-3">Location: <%=@pet.shelter.location%></li>
         </ul>
       </div>
 
