--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -16,11 +16,21 @@
     <div class="description ">
       <div class="pet-info">
         <ul class="list-inline">
-          <li class="list-inline-item mb-3">Species: <%=@pet.species %></li>
-          <li class="list-inline-item mb-3">Age: <%=@pet.age %></li>
-          <li class="list-inline-item mb-3">Gender: <%=@pet.gender%></li>
-          <li class="list-inline-item mb-3">Shelter: <%=@pet.shelter.name%></li>
-          <li class="list-inline-item mb-3">Location: <%=@pet.shelter.location%></li>
+          <li class="list-inline-item mb-3">
+            <i class="fa-solid fa-paw"></i> : <%=@pet.species %>
+          </li>
+          <li class="list-inline-item mb-3">
+            Age: <%=@pet.age %> yrs
+          </li>
+          <li class="list-inline-item mb-3">
+            <i class="fa-solid fa-venus-mars"></i> : <%=@pet.gender%>
+          </li>
+          <li class="list-inline-item mb-3">
+            <i class="fa-solid fa-house-chimney"></i> : <%=@pet.shelter.name%>
+          </li>
+          <li class="list-inline-item mb-3">
+            <i class="fa-solid fa-location-dot"></i> : <%=@pet.shelter.location%>
+          </li>
         </ul>
       </div>
 
