--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,18 +11,14 @@
       </div>
     </div>
 <!--    Search bar -->
-    <div class="navbar-search">
-        <form class="d-flex ">
-          <div class="nav-search-container d-flex align-items-center">
-            <input class="form-control rounded-pill border-0"
-                   type="search" placeholder="Search" aria-label="Search">
-            <!-- Button which submits the form -->
-            <span class="" type="submit">
-              <i class="fa-solid fa-magnifying-glass pe-2 opacity-50"></i>
-            </span>
-          </div>
-        </form>
-      </div>
+<%= form_tag pets_path, method: :get, class: "d-flex" do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find a pet"
+  %>
+  <%= submit_tag "Search", class: "btn btn-primary" %>
+<% end %>
 <!--    avatar and dropdown -->
     <div class="nav-avatar-dropdown">
       <ul class="navbar-nav">
