--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
   <h1>Add Pet</h1>
   <%= render 'form' %>
-  <%= link_to "Back", pets_path %>
+  <%= link_to "Back", shelter_path %>
 </div>
