--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,16 +1,9 @@
 <div class="container mt-3">
   <h1>Pets Overview</h1>
 
-<!--  Uncomment to release the new pet button-->
-<!--  <div class="new-pet-btn d-flex justify-content-center align-items-center m-3">-->
-    <%#= link_to new_pet_path do%>
-<!--      <span class=""><i class="fa-solid fa-plus"></i></span>-->
-    <%#end %>
-<!--  </div>-->
-
-  <section class="grid-section mb-5">
+  <section class="grid-overview-section mb-5">
     <% @pets.each do |pet| %>
-      <div class="grid-section-item">
+      <div class="grid-overview-section-item">
         <%=render "shared/pet_card", pet: pet%>
       </div>
     <% end %>
