--- a/app/assets/stylesheets/pages/_pets_index.scss
+++ b/app/assets/stylesheets/pages/_pets_index.scss
@@ -1,15 +1,6 @@
-.grid-section{
+.grid-overview-section{
   display: grid;
   gap: 1rem;
   grid-template-columns: repeat(4, 1fr);
 }
-.new-pet-btn{
-  width: 50px;
-  height: 50px;
-  font-size: 1.5em;
-  background-color: #0D6EFD;
-  border-radius: 50%;
-}
-.new-pet-btn a{
-  color: white;
-}
+
