--- a/app/views/shared/_booking_card.html.erb
+++ b/app/views/shared/_booking_card.html.erb
@@ -1,12 +1,22 @@
-<div class="card pet-card" style="width: 20rem;">
-  <%#= link_to booking_path(booking), class:"pet-card-btn" do%>
+<div class="card booking-card pet-card" style="width: 20rem;">
   <img class="card-img-top pet-card-image" src="https://source.unsplash.com/featured/?<%=booking.pet.species%>}&#{rand(10000)}" alt="Card image cap">
   <div class="card-body px-3">
     <h3 class="card-title"><%= booking.pet.name %></h3>
     <p class="card-text">Status: <%= booking.status %></p>
     <p class="card-text">From: <%= booking.start_date.strftime("%d/%m/%y") %></p>
     <p class="card-text">To: <%= booking.end_date.strftime( "%d/%m/%y") %></p>
-    <div class="card-text">Total: $<%= (booking.end_date-booking.start_date).to_i * booking.pet.price %> (<%= (booking.end_date-booking.start_date).to_i %> days total)</div>
+    <div class="card-text">Total: $
+      <%= (booking.end_date-booking.start_date).to_i * booking.pet.price %>
+      (<%= (booking.end_date-booking.start_date).to_i %> days total)
+    </div>
+
+    <% if booking.status == "pending" %>
+      <div class="booking-card-form d-flex justify-content-between">
+        <button class="booking-card-btn accept">Approve</button>
+        <button class="booking-card-btn reject">Reject</button>
+      </div>
+    <% end %>
+
   </div>
   <%#end %>
 </div>
