--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container mt-3">
   <h1>Your Bookings</h1>
-  <section class="grid-section mb-5">
+  <section class="grid-overview-section mb-5">
     <% @bookings.each do |booking| %>
-      <div class="grid-section-item">
+      <div class="grid-overview-section-item">
         <%=render "shared/booking_card", booking: booking%>
       </div>
     <% end %>
