resized the form

--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container d-flex justify-content-center">
-  <div class="auth-form">
+  <div class="auth-form auth-form-wide">
     <h2 class="auth-head">New pet</h2>
     <%= simple_form_for @pet do |f| %>
       <%= f.input :name %>
