--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -5,6 +5,6 @@
   <%= f.input :age %>
   <%= f.input :description %>
   <%= f.input :price %>
-  <%# <%= f.input :photo, as: :file %>
+  <%= f.input :photo, as: :file %>
   <%= f.submit 'Submit', class: 'btn btn-primary mt-2' %>
 <% end %>
