exclude profile icon if not logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body class="main">
-    <%= render "shared/navbar" if current_user %>
+    <%= render "shared/navbar"%>
     <div class="content-vh">
     <%=yield%>
     </div>
