--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,6 +20,7 @@
   <%= submit_tag "Search", class: "btn btn-primary" %>
 <% end %>
 <!--    avatar and dropdown -->
+  <% if current_user %>
     <div class="nav-avatar-dropdown">
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
@@ -75,5 +76,6 @@
         </li>
       </ul>
     </div>
+  <% end %>
   </div>
 </nav>
