--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -15,15 +15,33 @@
 }
 
 .navbar-search{
-  width: 50%;
-}
-.nav-search-container{
-  width: 70%;
+  width: 100%;
   background: #F4F4F4;
   border-radius: 50px;
   border: 1px solid rgba(0,0,0,0.3);
+  padding: 8px 8px 8px 16px;
+}
+.navbar-search-btn{
+  position: absolute;
+  right: 20px;
+  background: transparent;
+  border: none;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgba(0,0,0,0.5);
+}
+.search-wrap{
+  position: relative;
+
+}
+.navbar-search-container{
+width: 100%;
+}
+.container-gap{
+  gap: 10%;
 }
 .form-control:focus {
   box-shadow: none;
+  border: 1px solid rgba(0,0,0,0.3);
 }
 
