--- a/app/views/shelters/shelter.html.erb
+++ b/app/views/shelters/shelter.html.erb
@@ -25,15 +25,15 @@
           <div class="bookings-items">
             <p>Pending</p>
             <% @shelter.bookings.where(status: "pending").each do |booking|%>
-              <%=render "shared/booking_card", booking: booking%>
+              <%=render "shared/reservation_card", booking: booking%>
             <% end %>
             <p>Accepted</p>
             <% @shelter.bookings.where(status: "accepted").each do |booking|%>
-              <%=render "shared/booking_card", booking: booking%>
+              <%=render "shared/reservation_card", booking: booking%>
             <% end %>
             <p>Rejected</p>
             <% @shelter.bookings.where(status: "declined").each do |booking|%>
-              <%=render "shared/booking_card", booking: booking%>
+              <%=render "shared/reservation_card", booking: booking%>
             <% end %>
           </div>
         </div>
