--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -8,7 +8,7 @@
       <%= f.input :age %>
       <%= f.input :description %>
       <%= f.input :price %>
-      <%= f.input :photo, as: :file
+      <%= f.input :photo, as: :file %>
       <div class="form-actions auth-btn-container">
         <%= f.button :submit, 'Submit', class: "auth-btn" %>
       </div>
