--- a/app/views/shared/_pet_card.html.erb
+++ b/app/views/shared/_pet_card.html.erb
@@ -4,7 +4,7 @@
   <div class="card-body px-3">
     <h3 class="card-title"><%= pet.name %> (<%= pet.species %>)</h3>
     <p class="card-text">Location: <%= pet.shelter.location %></p>
-    <p class="card-text">Price: <%= pet.price %>$</p>
+    <p class="card-text">Price: $<%= pet.price %>0/day</p>
   </div>
   <%end %>
 </div>
