finished shelter delete

--- a/app/views/shelters/shelter.html.erb
+++ b/app/views/shelters/shelter.html.erb
@@ -11,7 +11,7 @@
           <section class="grid-bookings-section mb-5">
           <% @shelter.pets.each do |pet| %>
             <div class="grid-bookings-section-item">
-              <%=render "shared/pet_card", pet: pet%>
+              <%=render "shared/pet_card", pet: pet, delete: true%>
             </div>
           <% end %>
         </section>
