--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -4,7 +4,7 @@
   <section class="grid-overview-section mb-5">
     <% @pets.each do |pet| %>
       <div class="grid-overview-section-item">
-        <%=render "shared/pet_card", pet: pet%>
+        <%=render "shared/pet_card", pet: pet, delete: false%>
       </div>
     <% end %>
   </section>
