--- a/app/assets/stylesheets/pages/_shelters_show.scss
+++ b/app/assets/stylesheets/pages/_shelters_show.scss
@@ -1,26 +1,34 @@
-.shelter-container{
-}
-
-.bookings-container{
-  border-left: 1px solid rgba(0,0,0,0.3);
+.pets-container{
+  //border-left: 1px solid rgba(0,0,0,0.3);
   margin-left: 16px;
   padding-left: 16px;
   position: sticky;
   top: 0;
+  background-color: white;
+  border-radius: 16px;
 }
-.bookings-column{
+.reservation-bg{
+  background-color: white;
+  border-radius: 16px;
+  padding: 16px;
+}
+.pets-column{
   position:sticky;
   top:0;
   height:100vh;
   overflow:scroll;
   scrollbar-width: none;
-
 }
 
-.grid-bookings-section{
+.grid-pets-section{
   display: grid;
   gap: 1rem;
+  grid-template-columns: 1fr;
+}
+.bookings-grid{
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 16px;
 }
 
 .scrollbar{
@@ -32,14 +40,22 @@
   border-radius: 16px;
 }
 .new-pet-btn{
-  font-size: 2em;
+  font-size: 1.8rem;
   color: #0D6EFD;
   display: flex;
   align-items: center;
-  padding-left: 8px;
-  padding-bottom: 8px;
 }
 .my-pets-head a{
   color: #0D6EFD;
   text-decoration: none;
+}
+
+.card-thinner{
+  max-width: 260px;
+}
+
+.sub-head{
+  //background-color: #F4F4F4;
+  //border-radius: 50px;
+  //padding: 8px;
 }
