--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -3,5 +3,5 @@
 @import "pets_index";
 @import "pets_show";
 @import "bookings_new";
-@import "user_sign_in";
+@import "auth_form";
 @import "shelters_show";
