--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,10 +1,12 @@
-<%= simple_form_for [@pet, @booking] do |f| %>
-    <%= f.input :start_date, as: :date, html5: true, class: "start-date" %>
-    <%= f.input :end_date, as: :date, html5: true, class: "end-date" %>
-    <div class="price-tag">
-
-    </div>
-    <div class="submit-form d-flex justify-content-center ">
-    <%= f.submit 'Submit', class: 'form-button btn btn-primary flex-grow-1 mt-3' %>
-    </div>
-  <% end %>
+<!--<div data-controller ="price-controller">-->
+    <%= simple_form_for [@pet, @booking] do |f| %>
+        <%= f.input :start_date, as: :date, html5: true, class: "start-date" %>
+        <%= f.input :end_date, as: :date, html5: true, class: "end-date" %>
+<!--        <div data-price-target ="price" class="price-tag">-->
+<!--            <span data-action="click->price#edit">hello</span>-->
+<!--        </div>-->
+        <div class="submit-form d-flex justify-content-center ">
+        <%= f.submit 'Submit', class: 'form-button btn btn-primary flex-grow-1 mt-3' %>
+        </div>
+    <% end %>
+<!--</div>-->
