changed buttons colors

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -31,12 +31,13 @@ margin-bottom: 16px;
   border: none;
 }
 .accept{
-  background-color: #0D6EFD;
+  background-color: #60463B;
+  color: white;
 }
 .reject{
-  color: #0D6EFD;
+  color: #60463B;
   background-color: white;
-  border: 1px solid #0D6EFD;
+  border: 1px solid #60463B;
 }
 .reservation-card{
   max-width: 300px;
@@ -46,6 +47,8 @@ margin-bottom: 16px;
 .card-thinner{
   max-width: 260px;
 }
+
+
 
 
 
