--- a/app/assets/stylesheets/pages/_shelters_show.scss
+++ b/app/assets/stylesheets/pages/_shelters_show.scss
@@ -41,12 +41,12 @@
 }
 .new-pet-btn{
   font-size: 1.8rem;
-  color: #0D6EFD;
+  color: #60463B;
   display: flex;
   align-items: center;
 }
 .my-pets-head a{
-  color: #0D6EFD;
+  color: #60463B;
   text-decoration: none;
 }
 
