--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,12 +4,11 @@
       <h1>Confirm Booking</h1>
     </div>
     <%= render 'form' %>
-    <div class="d-flex justify-content-center ">
+    <div class="d-flex justify-content-center auth-btn-container">
       <%= link_to pet_path(@pet),
-                  class:"back-button flex-grow-1 d-flex justify-content-center" do%>
+                  class:"auth-btn-back" do%>
         <span>Back</span>
       <%end %>
-
     </div>
   </div>
 </div>
