--- a/app/views/pets/_form.html.erb
+++ b/app/views/pets/_form.html.erb
@@ -14,7 +14,8 @@
       </div>
     <% end %>
     <div class="form-actions auth-btn-container">
-    <%= link_to "Back", shelter_path, class: "auth-btn-back d-flex justify-content-center" %>
+    <%= link_to "Back", shelter_path,
+                class: "auth-btn-back" %>
     </div>
   </div>
 </div>
