--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -4,7 +4,7 @@
     <div class="price-tag">
 
     </div>
-    <div class="submit-form d-flex justify-content-center ">
-    <%= f.submit 'Submit', class: 'form-button btn btn-primary flex-grow-1 mt-3' %>
+    <div class="submit-form auth-btn-container">
+        <%= f.button :submit, "Submit", class: 'auth-btn mt-3' %>
     </div>
   <% end %>
