--- a/app/assets/stylesheets/pages/_auth_form.scss
+++ b/app/assets/stylesheets/pages/_auth_form.scss
@@ -29,8 +29,13 @@ display: flex;
   justify-content: center;
   flex-grow: 1;
 }
+.auth-btn:hover{
+  background-color: transparent;
+  color: #60463B;
+  border: 1px solid #60463B;
+}
 .auth-btn-back{
-  background-color: white;
+  background-color: transparent;
   color: #60463B;
   border: 1px solid #60463B;
   border-radius: 8px;
@@ -39,5 +44,11 @@ display: flex;
   flex-grow: 1;
   text-decoration: none;
   padding: 8px;
+  transition: 300ms;
+}
+.auth-btn-back:hover{
+  background-color: #60463B;
+  color: white;
+
 }
 
