--- a/app/assets/stylesheets/pages/_pets_show.scss
+++ b/app/assets/stylesheets/pages/_pets_show.scss
@@ -40,11 +40,16 @@ $px:80px;
   font-weight: bold;
 }
 .pet-info li{
-  padding: 8px;
-  background-color: lightgray;
-  border-radius: 4px;
+  padding: 10px;
+  background-color: rgba(0,0,0,0.25);
+  border-radius: 5px;
+  color: rgba(0,0,0,0.85);
+  transition: 300ms;
 }
-
+.pet-info li:hover{
+  border-radius: 2px;
+  box-shadow: 0 0 8px rgba(0,0,0,0.2);
+}
 .pet-description{
   font-size: 1.2em;
   max-width: 720px;
