--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,61 +27,63 @@
     </div>
 <!--    avatar and dropdown -->
   <% if current_user %>
-    <div class="nav-avatar-dropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <%=link_to "/", class:"nav-link",
-                     id:"navbarDarkDropdownMenuLink",
-                     role:"button", data:{bs_toggle:"dropdown"},
-                      aria:{expanded:"false"} do%>
-<!--              place for avatar picture-->
-              <img src="https://picsum.photos/100/100"
-                   alt="avatar" class="avatar-xlarge">
-          <%end %>
-
-          <ul class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="navbarDarkDropdownMenuLink">
-<!--            List of actions in Dropdown-->
-             <% if current_user%>
-                <li>
-                    <span class="dropdown-item"><%= current_user.user_name %></span>
-                </li>
-              <li>
-                <div class="dropdown-divider"></div>
-              </li>
+      <div class="avatar-container">
+        <div class="nav-avatar-dropdown">
+          <ul class="navbar-nav">
+          <li class="nav-item dropdown">
+            <%=link_to "/", class:"nav-link",
+                       id:"navbarDarkDropdownMenuLink",
+                       role:"button", data:{bs_toggle:"dropdown"},
+                        aria:{expanded:"false"} do%>
+  <!--              place for avatar picture-->
+                <img src="https://picsum.photos/100/100"
+                     alt="avatar" class="avatar-xlarge">
             <%end %>
-            <li>
-              <%=link_to "/", class:"dropdown-item" do%>
-                <span>Home</span>
+
+            <ul class="dropdown-menu dropdown-menu-end"
+                aria-labelledby="navbarDarkDropdownMenuLink">
+  <!--            List of actions in Dropdown-->
+               <% if current_user%>
+                  <li>
+                      <span class="dropdown-item"><%= current_user.user_name %></span>
+                  </li>
+                <li>
+                  <div class="dropdown-divider"></div>
+                </li>
               <%end %>
-            </li>
-            <li>
-              <%=link_to "/pets", class:"dropdown-item" do%>
-                <span>Pets</span>
-              <%end %>
-            </li>
-            <li>
-              <%=link_to "/bookings", class:"dropdown-item" do%>
-                <span>Bookings</span>
-              <%end %>
-            </li>
-            <% if policy(Shelter).shelter? %>
-            <li>
-              <%=link_to "/shelter", class:"dropdown-item" do%>
-                <span>Dashboard</span>
-              <%end %>
-            </li>
-            <% end %>
-            <li>
-            <div class="dropdown-divider"></div>
-            </li>
-            <li>
-              <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
+              <li>
+                <%=link_to "/", class:"dropdown-item" do%>
+                  <span>Home</span>
+                <%end %>
+              </li>
+              <li>
+                <%=link_to "/pets", class:"dropdown-item" do%>
+                  <span>Pets</span>
+                <%end %>
+              </li>
+              <li>
+                <%=link_to "/bookings", class:"dropdown-item" do%>
+                  <span>Bookings</span>
+                <%end %>
+              </li>
+              <% if policy(Shelter).shelter? %>
+              <li>
+                <%=link_to "/shelter", class:"dropdown-item" do%>
+                  <span>Dashboard</span>
+                <%end %>
+              </li>
+              <% end %>
+              <li>
+              <div class="dropdown-divider"></div>
+              </li>
+              <li>
+                <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        </div>
+      </div>
   <% end %>
   </div>
 </nav>
